--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "vinyl-file": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.10.0",
     "webpack-stream": "^3.1.0",
     "yargs": "^1.3.3"
   },
@@ -132,6 +133,7 @@
   },
   "scripts": {
     "pui-update": "scripts/pui-update.js",
-    "test": "gulp ci --fatal"
+    "test": "gulp ci --fatal",
+    "sandbox": "gulp build && cp -r ./dist/* ./sandbox/node_modules/pivotal-ui/ && cd sandbox && yarn start"
   }
 }
